Fixed buttons things and moved header twitter etc to footer

--- a/contactus.html
+++ b/contactus.html
@@ -16,26 +16,37 @@
 </head>
 <body>
 
-<div class="container">
-       <header class="site-header">
-        <div class="top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <ul class="list-inline pull-right">
-                            <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="mailto:imohirsh@icloud.com"><i class="fa fa-envelope-o"></i></a></li>
-                            <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
-                            <li><a href="tel:+902222222222"><i class="fa fa-phone"></i>  011111 469869</a></li>
-                        </ul>                        
-                    </div>
-                </div>
-            </div>
-        </div>
-  </div>
 
 <div class="container">
+<div class="overlay"> 
+        <h1>Contact Us</h1>
+        <p>The overall guide for moving to London</p> 
+         <div class="row">
+            <div id="topbutton" class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="areaguide.html">
+                  <h2> Area Guide</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4 top-buffer">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff</h2>        
+                </a>
+              </div>
+            </div>
+           <div class="col-sm-4 top-buffer">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="index.html">
+                  <h2> Home </h2>
+                </a>
+              </div>
+            </div>
+          </div>
+</div>
+</div>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
   <ol class="carousel-indicators hidden-sm hidden-xs">
@@ -49,128 +60,19 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="index.html">
-                  <h2> Home </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Contact Us</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
        <div class="item">
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="index.html">
-                  <h2> Home </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Contact Us</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
 
     <div class="item">
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="index.html">
-                  <h2> Home </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Contact Us</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
     <div class="item">
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="index.html">
-                  <h2> Home </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Contact Us</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
-    </div>
   </div>
 
 
@@ -187,11 +89,6 @@
 </div>    
 </div>
 
-
-<br />
-<br />
-<br />
-<br />
 <br />
 
 
@@ -213,6 +110,25 @@
 
 
 
+  <div class="container">
+       <footer class="site-footer">
+        <div class="top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul class="list-inline pull-right">
+                            <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="mailto:imohirsh@icloud.com"><i class="fa fa-envelope-o"></i></a></li>
+                            <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
+                            <li><a href="tel:+902222222222"><i class="fa fa-phone"></i>  011111 469869</a></li>
+                        </ul>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+     </footer> 
+  </div>
 
 
 
