--- a/areaguide.html
+++ b/areaguide.html
@@ -16,28 +16,38 @@
 <body>
 
 <div class="container">
-       <header class="site-header">
-        <div class="top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <ul class="list-inline pull-right">
-                            <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="mailto:imohirsh@icloud.com"><i class="fa fa-envelope-o"></i></a></li>
-                            <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
-                            <li><a href="tel:+902222222222"><i class="fa fa-phone"></i>  011111 469869</a></li>
-                        </ul>                        
-                    </div>
-                </div>
+<div class="overlay"> 
+        <h1> Area Guide </h1>
+        <p>The overall guide for moving to London</p> 
+         <div class="row">
+            <div id="topbutton" class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="index.html">
+                  <h2> Home </h2>
+                </a>
+              </div>
             </div>
-        </div>
-  </div>
+            <div class="col-sm-4 top-buffer">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff</h2>        
+                </a>
+              </div>
+            </div>
+           <div class="col-sm-4 top-buffer">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="contactus.html">
+                  <h2> Contact Us </h2>
+                </a>
+              </div>
+            </div>
+          </div>
+</div>
+</div>
 
-<div class="container hidden-sm hidden-xs">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-  <ol class="carousel-indicators">
+  <ol class="carousel-indicators hidden-sm hidden-xs">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -48,128 +58,19 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
        <div class="item">
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
 
     <div class="item">
       <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
     </div>
 
     <div class="item">
       <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
-      <div class="carousel-caption">
-         <div class="row">
-            <div id="topbutton" class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html">
-                  <h2>Important Stuff</h2>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4 top-buffer">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html">
-                  <h2> Contact Us </h2>
-                </a>
-              </div>
-            </div>
-          </div>
-        <h1 class="carousel-title hidden-sm hidden-xs">Area Guide</h1>
-        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
-      </div>
-    </div>
   </div>
 
 
@@ -185,6 +86,9 @@
   </a>
 </div>    
 </div>
+
+<br />
+
       <br />
       <br />
        <br />
@@ -337,6 +241,27 @@ Insert Google Maps API Stuff
 <br />
 <br />
 <br />
+
+  <div class="container">
+       <footer class="site-footer">
+        <div class="top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul class="list-inline pull-right">
+                            <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="mailto:imohirsh@icloud.com"><i class="fa fa-envelope-o"></i></a></li>
+                            <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
+                            <li><a href="tel:+902222222222"><i class="fa fa-phone"></i>  011111 469869</a></li>
+                        </ul>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+     </footer> 
+  </div>
+
 
 </body>
 
