--- a/index.html
+++ b/index.html
@@ -97,12 +97,25 @@
     <div class="col-md-6">
 <div class="textcontainer">
       <br />
-      <h4>   You're moving to London! <br /> How exciting. We're here to help you navigate the process of finding a place to live in London. </h4>
-      <br />
+      <h4>   You're moving to London! <br /> How exciting. We're here to help you navigate the process of finding a place to live in London. <br /> </h4>.
     </div>
   </div>
   <div class="col-sm-3"> </div>
 </div>
+
+<br />
+<div class="row">
+  <div class="col-sm-2"> </div>
+    <div class="col-md-8">
+<div class="textcontainer">
+      <br />
+      <h3> Click on <strong>Area Guide</strong> to find out more about places to live in London, click on <strong>Important Stuff</strong> to find out more about the important things to know about moving to London and click on  <strong>Contact Us</strong> to let us know if you have any hints or tips that you would like to share! </h3> 
+      <br />
+    </div>
+  </div>
+  <div class="col-sm-2"> </div>
+</div>
+
 
 
 
