Changed North photo

--- a/areaguide.html
+++ b/areaguide.html
@@ -136,7 +136,7 @@
   <div class="col-sm-4"> </div>
   <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/North_no_border.png" alt="Avatar" class="image">
+      <img src="assets/images/North_no_border.jpg" alt="Avatar" class="image">
       <div class="overlay2">
         <div class="text">
           <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
