Changed West photo again

--- a/areaguide.html
+++ b/areaguide.html
@@ -158,7 +158,7 @@
 
     <div class="col-sm-4"> 
     <div class="container1">
-      <img src="assets/images/West_no_border.jpg" alt="Avatar" class="image">
+      <img src="assets/images/West_no_border.jpg.png" alt="Avatar" class="image">
       <div class="overlay2">
         <div class="text">
           <h3> The richest and most suburban part of London. Generally quiet and calm, with lots of pet owners! </h3>
