Updated spacing on Not Sure where to Start

--- a/areaguide.html
+++ b/areaguide.html
@@ -97,11 +97,9 @@
     <div class="col-md-6">
 <div class="textcontainer">
       <br />
-      <h4> Not sure where to start? </h4>
-      <h4> Try these handy sites: </h4>
+      <h4> <strong>Not sure where to start?</strong> Try these handy sites:</h4><br />
       <h4>
-      <ul>
-        <strong> <a href="http://property.mapumental.com/">Mapumental </a> </strong> allows you to track your commute time from your work, school or favourite bar! <br />
+        <strong> <a href="http://property.mapumental.com/">Mapumental </a> </strong> allows you to track your commute time from your work, school or favourite bar! <br /><br />
         <strong> <a href="https://www.allinlondon.co.uk/boroughs/">All In London </a> </strong> gives you an overview of every London Borough 
       </h4>
       </ul>
