--- a/importantstuff.html
+++ b/importantstuff.html
@@ -98,12 +98,54 @@
     <div class="col-md-6">
 <div class="textcontainer">
       <br />
-      <h4>   ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !! ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !!ENTER TEXT ABOUT IMPORTANT STUFF FOR MOVING TO LONDON IS THIS BLOCK HERE !! </h4>
+      <h4><strong>Things you need to know when renting in London</strong></h4>
       <br />
+      <h4>Navigating renting in London can be pretty overwhelming. <br /> <br />So we've given you some pointers about where to start. <br /> <br />Hover over the boxes to get some tips!</h4>
     </div>
   </div>
   <div class="col-sm-3"> </div>
 </div>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4><strong>Where to look</strong></h4>
+      <br />
+      <h4>There are many places to start looking for your new London home <br /> <br />Why not try:</h4><br />
+      <ul>
+        <li><bold><a href="https://www.spareroom.co.uk">SpareRoom</a></bold> is a good place to look for spare rooms across London. It's free to use, but some for features you need to be a subscriber. This is a good place to look if you are looking for short-term lets. As with all free sites, make sure you view the place before you hand over any money.</li><br />
+        <li><bold><a href="https://www.openrent.co.uk/">OpenRent</a></bold> links landlords and tenants directly which reduces fees!</li><br />
+        <li><bold><a href="https://www.rentsquare.io/tenants/">rentsquare</a></bold> is another way to find places with lower rent and lower fees.</li><br />
+        <li><bold><a href="http://www.rightmove.co.uk/">RightMove</a></bold> is also a great site for longer term rentals, although the listings tend to be from agents who may charge high fees.</li><br />
+        <li><bold><a href="https://www.primelocation.com/to-rent/">PrimeMove</a></bold> is similar to RightMove, it has lots of longer term listings by agents across London.</li><br />
+        <li>You might also like to try <bold><a href="https://www.gumtree.com/property-to-rent/london">Gumtree</a></bold> or websites (or shop windows) of letting agents. Hover over the <a ref="agents_container">Letting Agents</a> box for a few pointers!</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4><strong>Letting Agents</strong></h4>
+      <br />
+      <h4>There are millions of letting agents in London. Some are better than others, so how do you know who to use? <br /> <br />Here are some things to think about:</h4><br />
+      <ul>
+        <li>The benefits of going through a letting agents are that they act as an intermediary between you and the landlord, they may be able to show you multiple properties that suit your requirements at once and they might  might be more available for viewings than private landlords</li>
+        <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold>but because they have a reputation to protect, are more likely to have procedures in place to make sure they are doing the right thing </li><br />
+        <li>You don't have to go through a letting agents, and many landlords may rent their place directly to you (try OpenRent or SpareRoom)</li><br  />
+        <li>Remember to always ask letting agents about <bold>all</bold> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+
 
 <br />
 <br />
