--- a/contactus.html
+++ b/contactus.html
@@ -97,30 +97,7 @@
   <div class="col-sm-3"> </div>
     <div class="col-md-6">
      <div class="container">
-
-          <form action="/action_page.php">
-              <label for="fname">First Name</label>
-              <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-              <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-              <label for="Continent">Continent</label>
-              <select id="Continent" name="Continent">
-                    <option value="usa">Africa</option>
-                    <option value="canada">Asia</option>
-                    <option value="australia">Australasia</option>
-                    <option value="usa">Europe</option>
-                    <option value="usa">North America</option>
-                    <option value="usa">South America</option>
-                </select>
-
-              <label for="subject">Comments or Tips!</label>
-              <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-              <input type="submit" value="Submit">
-              </form>
-            </div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2DpZsG22I1pELr3tBY5P5p7MAo_kOTfVHSvWH60QW1DJi8A/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
       <br />
   </div>
