To do list stuff

--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
 </div>
 
 
+<br />
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h3> Also use our handy To Do list to make sure you have everything ready for moving to London! </h3> 
+      <br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+<br />
+
 
 
 <div class="row">
@@ -307,6 +321,7 @@ function newElement() {
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
+
 
 <h3>Where Is London?</h3>
 
