to do list updates

--- a/index.html
+++ b/index.html
@@ -252,8 +252,10 @@ input {
 </div>
 
 <ul id="myUL">
-  <li>Find a place to live</li>
+  <li>Chose what area to live in</li>
   <li class="checked">Sort out council tax</li>
+  <li class="checked">Create a budget for rent, bills etc</li>
+  <li class="checked">Visit homes in the area</li>
 </ul>
 
 <script>
