Updated text on Letting Agents

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -115,7 +115,7 @@
     <div class="col-md-6">
 <div class="textcontainer">
       <br />
-      <h4><strong>Where to look</strong></h4>
+      <h4><strong>Where to look for spare rooms</strong></h4>
       <br />
       <h4>There are many places to start looking for your new London home <br /> <br />Why not try:</h4><br />
       <ul>
@@ -140,9 +140,9 @@
       <br />
       <h4>There are millions of letting agents in London. Some are better than others, so how do you know who to use? <br /> <br />Here are some things to think about:</h4><br />
       <ul>
-        <li>The benefits of going through a letting agents are that they act as an intermediary between you and the landlord, they may be able to show you multiple properties that suit your requirements at once and they might  might be more available for viewings than private landlords</li>
-        <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold>but because they have a reputation to protect, are more likely to have procedures in place to make sure they are doing the right thing </li><br />
-        <li>You don't have to go through a letting agents, and many landlords may rent their place directly to you (try OpenRent or SpareRoom)</li><br  />
+        <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and they might be able to show you multiple properties at more convenient times.</li>
+        <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold>but are more like to have smooth procedures </li><br />
+        <li>You don't have to go through a letting agents. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
         <li>Remember to always ask letting agents about <bold>all</bold> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li>
       </ul>
     </div>
