--- a/importantstuff.html
+++ b/importantstuff.html
@@ -134,7 +134,7 @@
 <div class="row">
   <div class="col-sm-3"> </div>
     <div class="col-md-6">
-<div class="textcontainer">
+    <div class="textcontainer">
       <br />
       <h4><strong>Letting Agents</strong></h4>
       <br />
@@ -144,7 +144,8 @@
         <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold>but are more like to have smooth procedures </li><br />
         <li>You don't have to go through a letting agents. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
         <li>Remember to always ask letting agents about <bold>all</bold> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li>
-      </ul>
+      </ul><br />
+      <h4>Check out <strong> <a href="https://www.allagents.co.uk/">allAgents</a></strong>for reviews of letting agents:</h4>
     </div>
   </div>
   <div class="col-sm-3"> </div>
