--- a/index.html
+++ b/index.html
@@ -224,13 +224,14 @@ input {
   padding: 10px;
   float: left;
   font-size: 16px;
+  color: black;
 }
 
 .addBtn {
   padding: 10px;
   width: 25%;
   background: #d9d9d9;
-  color: #555;
+  color: #090f19;
   float: left;
   text-align: center;
   font-size: 16px;
