--- a/importantstuff.html
+++ b/importantstuff.html
@@ -151,6 +151,57 @@
   <div class="col-sm-3"> </div>
 </div>
 
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+    <div class="textcontainer">
+      <br />
+      <h4><strong>Things to ask when you view a place</strong></h4>
+      <br />
+      <h4>Make sure you make the most of your viewings by asking these things:</h4><br />
+      <ul>
+        <li>The amount of rent (weekly or monthly)</li><br  />
+        <li><strong>All</strong> fees associated with the property</li><br />
+        <li>Council tax</li><br />
+        <li>Approximate cost of bills per month</li><br  />
+        <li>Are any bills included in the rent?</li><br  />
+        <li>How to make an application</li><br  />
+        <li>Why are the previous tenants moving?</li><br  />
+        <li>What date is it available?</li><br  />
+        <li>How long is the tenancy?</li><br  />
+        <li>What are the other tenants like?</li><br  />
+        <li>Where's the nearest tube station/bus stop?</li><br  />
+        <li>Where's the nearest supermarket?</li><br  />
+      </ul><br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
+    <div class="textcontainer">
+      <br />
+      <h4><strong>Things to check when you view a place</strong></h4>
+      <br />
+      <h4>Make sure you make the most of your viewings by checking these things:</h4><br />
+      <ul>
+        <li>Do the windows close properly?</li><br  />
+        <li>Is there enough storage?</li><br />
+        <li>Is there any damp/mould?</li><br />
+        <li>How noisy is it? Look for bars, trains and busy roads close by.</li><br  />
+        <li>Is the area safe and is the place secure?</li><br  />
+        <li>Do the appliances work?</li><br  />
+        <li>Does it come furnished?</li><br  />
+        <li>Is it very cold or warm?</li><br  />
+        <li>Water pressure</li><br  />
+        <li>Are there any signs of vermin?</li><br  />
+      </ul><br />
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
 
 <br />
 <br />
