area guide works??

--- a/areaguide.html
+++ b/areaguide.html
@@ -135,7 +135,7 @@
   <div class="col-sm-4"> 
     <div class="container1">
       <img src="assets/images/North_no_border.jpg" alt="Avatar" class="image">
-      <div class="overlay">
+      <div class="overlay2">
         <div class="text">
           <h3> Generally starting north of Euston road and Kings Cross, North London is a mix of wealthy areas such as Hampstead and Highgate, and those less affluent such as Holloway and Edmonton. </h3>
           <h3>Some places to live in North London are:</h3>
@@ -157,7 +157,7 @@
     <div class="col-sm-4"> 
     <div class="container1">
       <img src="assets/images/West_no_border.jpg.png" alt="Avatar" class="image">
-      <div class="overlay">
+      <div class="overlay2">
         <div class="text">
           <h3> The richest and most suburban part of London. Generally quiet and calm, with lots of pet owners! </h3>
           <h3>Some places to live in West London are:</h3>
@@ -174,7 +174,7 @@
   <div class="col-sm-4"> 
     <div class="container1">
       <img src="assets/images/Central_no_border.jpg" alt="Avatar" class="image">
-      <div class="overlay">
+      <div class="overlay2">
         <div class="text">
           <h3> If you want to be amongst all the famous sites, then Central London is for you. Beware of the tourists though! </h3>
           <h3>Some places to live in Central London are:</h3>
@@ -191,7 +191,7 @@
     <div class="col-sm-4"> 
     <div class="container1">
       <img src="assets/images/East_no_border.jpg" alt="Avatar" class="image">
-      <div class="overlay">
+      <div class="overlay2">
         <div class="text">
           <h3> Think hipsters and ecclectic bars and restaurants. </h3>
           <h3>Some places to live in East London are:</h3>
@@ -214,7 +214,7 @@
   <div class="col-sm-4"> 
     <div class="container1">
       <img src="assets/images/South_no_border.jpg" alt="Avatar" class="image">
-      <div class="overlay">
+      <div class="overlay2">
         <div class="text">
           <h3> South of the river there are lots of great markets, bars and restaurants. Unfairly stereotyped as rougher than the rest of London, there are plenty of green and pleasant suburban areas. </h3>
           <h3>Some places to live in South London are:</h3>
