Important stuff content added

--- a/importantstuff.html
+++ b/importantstuff.html
@@ -134,6 +134,25 @@
 <div class="row">
   <div class="col-sm-3"> </div>
     <div class="col-md-6">
+<div class="textcontainer">
+      <br />
+      <h4><strong>Types of rental properties</strong></h4>
+      <br />
+      <h4>There are lots of different rental options. These things will help you decide what you're looking for</h4><br />
+      <ul>
+        <li><bold>Short term or long term?</bold> Lets less than 12 months are usually called short term lets. If you're looking for a short term let, make sure you don't waste your time looking at places that are only available for longer.</li><br />
+        <li><bold>Whole place or flatshare?</bold> You could rent a whole place and divide the rent with some friends or do a flatshare. A flatshare is when you rent a bedroom and share the rest of the house with other flatsharers.</li><br />
+        <li><bold>Furnished or unfurnished?</bold> You might save money by renting an unfurnished place, but if you have to buy furniture it might cost more!</li><br />
+        <li><bold>Through a letting agent or directly with the landlord?</bold> <li>You don't have to go through a letting agent. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
+      </ul>
+    </div>
+  </div>
+  <div class="col-sm-3"> </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-3"> </div>
+    <div class="col-md-6">
     <div class="textcontainer">
       <br />
       <h4><strong>Letting Agents</strong></h4>
@@ -141,11 +160,11 @@
       <h4>There are millions of letting agents in London. Some are better than others, so how do you know who to use? <br /> <br />Here are some things to think about:</h4><br />
       <ul>
         <li>Letting agents can be helpful as they can ensure your tenancy is lawful and your bond is secure. They can act between you and the landlord and they might be able to show you multiple properties at more convenient times.</li>
-        <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold>but are more like to have smooth procedures </li><br />
-        <li>You don't have to go through a letting agents. Many landlords prefer to rent directly (try OpenRent or SpareRoom).</li><br  />
-        <li>Remember to always ask letting agents about <bold>all</bold> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li>
+        <br />
+        <li>The larger ones (such as Foxtons, Black Katz) probably charge <bold>higher fees</bold> but are more like to have smooth procedures </li><br />
+        <li>Remember to always ask about <bold>all</bold> the fees associated with the tenancy including agent fees, reference fees, application fees, lease termination fees, tenancy change fees, early check out fees, inventory fees, late fees and any other fees!</li>
       </ul><br />
-      <h4>Check out <strong> <a href="https://www.allagents.co.uk/">allAgents</a></strong>for reviews of letting agents:</h4>
+      <h4>Check out <strong><a href="https://www.allagents.co.uk/"> allAgents</a></strong> for reviews of letting agents</h4>
     </div>
   </div>
   <div class="col-sm-3"> </div>
