--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 
 
 <div class="row">
-    <div class="col-md-12">
+  <div class="col-sm-2"> </div>
+    <div class="col-md-8">
      <div class="container">
 <style>
 body {
@@ -158,6 +159,7 @@ ul li {
   list-style-type: none;
   background: #eee;
   font-size: 18px;
+  font: Stencil Std, fantasy;
   transition: 0.2s;
   
   -webkit-user-select: none;
@@ -201,15 +203,17 @@ ul li.checked::before {
 }
 
 .close:hover {
-  background-color: #f44336;
+  background-color: blue;
   color: white;
 }
 
 .header {
   background-color: #61b4d8;
-  padding: 30px 40px;
+  padding: 40px 40px;
   color: white;
   text-align: center;
+  font: Stencil Std;
+  
 }
 
 .header:after {
@@ -225,6 +229,7 @@ input {
   float: left;
   font-size: 16px;
   color: black;
+  font: Stencil Std;
 }
 
 .addBtn {
@@ -247,7 +252,7 @@ input {
 <body>
 
 <div id="myDIV" class="header">
-  <h2 style="margin:5px">My To Do List</h2>
+  <h5 style="margin:5px">To Do List For Moving To London</h5>
   <input type="text" id="myInput" placeholder="Title...">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
@@ -315,6 +320,7 @@ function newElement() {
        </div>
       <br />
   </div>
+  <div class="col-sm-2"> </div>
 </div>
 
 <br />
